02/20/14:
	Add option to send UDP server disconnect message
	Update example bluelog.conf

02/07/14:
	Terminate lines in config file with semicolon
	Use yes/no in config file instead of 1/0

02/07/14:
	Handle spaces in config file entries (Thanks, Ian)

01/31/14:
	Add prefix option, print node name to UDP messages
	Store local MAC in config struct
	Cleanly close UDP socket
	Update docs/man/help

01/25/14:
	Merge in WIP UDP mode code

01/21/14:
	Fix manufacturer mode not working with encode or obfuscate
	Fix Amnesia mode not working with encode or obfuscate
	Better separate user-visible and internal copies of discovered MAC

01/19/14:
	Fix "Quiet" mode not working from config file
	Enable setting BT interface in config file

01/13/14:
	Fix name resolution always being on.

12/23/13:
	Gracefully handle missing value in config file

11/09/13:
	Created default bluelog.conf file
	Makefile updated to create /etc/bluelog
	oui.txt moved to /etc/bluelog

11/08/13:
	Merged in experimental config file support.
	Not all options are yet supported in config file, but seems to be
	working. Any testing would be appreciated.

11/01/13: Released as Version 1.1.2
	Fix compiler warning for stable release. I'll break that later.

10/29/13:
	Minor Bluelog theme touchups
	Add basic theming info to README.LIVE

10/20/13:
	Add documentation for manufacturer lookups "-m"
	Higher resolution Bluelog logo, scale down in CSS for themes
	Added GitHub README.md

10/14/13:
	Add support for additional CSS elements in Live UI
	Add link to GitHub page in Live "About"
	Merge in libmackerel 1.1
	LCARS looking much better

10/13/13:
	New default theme for Bluelog Live, WIP
	Improvements to LCARS theme

04/11/13:
	Initial work on Pwn Pad target:
	No Live, OUI enabled, changed default log location, UI changes
	Cache size reduced for Pwn Plug and Pwn Pad

04/04/13:
	Added LCARS theme for Bluelog Live. Problem?

04/03/13:
	Fix Makefile after removing doc files

04/01/13: